# FastAPIJWTAuth

./: Dockerfile  README.md  application.py  config.py  docker-compose.yml  docker_app.py  docker_run.py  nginx_config.conf  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 09143a1a42e6_initial.py  142dc75a3940_second.py  3339176d0fb9_initial_migration.py  42686e9299c8_initial.py  71abf9edb8b0_initial_migration.py
app/: api.py  dependencies.py  models.py  schema.py
app/auth/: auth_bearer.py  auth_handler.py
app/models/: like.py  post.py  user.py
app/routes/: auth.py  healthcheck.py  like.py  post.py  user.py
app/schemas/: like.py  post.py  token.py  user.py
utils/: dependencies.py  helpers.py  responses.py
