[tool.poetry]
name = "fastapijwtauth"
version = "0.1.0"
description = ""
authors = ["Anna Kartasheva <annakartashevamail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^2.0.2"}
pyjwt = "^2.7.0"
python-decouple = "^3.8"
black = "^23.7.0"
isort = "^5.12.0"
sqlalchemy = "^2.0.18"
python-dotenv = "^1.0.0"
fastapi-sqlalchemy = "^0.2.1"
bcrypt = "^4.0.1"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
python-multipart = "^0.0.6"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
